fix: SpotBugsFindingSource (J1, G24, G22, G30, G5)
Move 36-entry rule mapping into spotbugs/rule-mapping.properties and
load on class init. Replace wildcard imports, mark locals final,
extract findingFor/lookupMapping/firstSourceLine/messageFor helpers.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>